@startuml
  namespace tdt4145.core.repo {
    class tdt4145.core.repo.Cleanup {
        {static} ~ closePreparedStatement()
        {static} ~ closeResultSet()
        {static} ~ closeStatement()
        {static} ~ enableAutoCommit()
        {static} ~ performRollback()
        {static} ~ performRollback()
    }
  }
  

  namespace tdt4145.core.repo {
    class tdt4145.core.repo.CourseDAO {
        - connection : Connection
        + CourseDAO()
        + createActiveCourse()
        + getAnonymousCourse()
        + getCourses()
    }
  }

  namespace tdt4145.core.repo {
      class tdt4145.core.repo.Password {
          {static} - ITERATIONS : int
          {static} - KEY_LENGTH : int
          {static} - SALT_LENGTH : int
          {static} + getSalt()
          {static} + hash()
          {static} + verify()
      }
    }
  

  namespace tdt4145.core.repo {
    class tdt4145.core.repo.Database {
        {static} - DATABASE_DRIVER : String
        {static} - DATABASE_PASSWORD : String
        {static} - DATABASE_URL : String
        {static} - DATABASE_USERNAME : String
        {static} - comboPooledDataSource : ComboPooledDataSource
        {static} - database : Database
        + getConnection()
        {static} + getInstance()
        {static} + setNewDatabase()
        {static} + setNewDatabase()
        - Database()
    }
  }
  

  namespace tdt4145.core.repo {
    class tdt4145.core.repo.FolderDAO {
        - connection : Connection
        + FolderDAO()
        + createFolder()
        + createRootFolder()
        + createSubFolder()
        + getFolderID()
        + getTopFolder()
    }
  }
  

  namespace tdt4145.core.repo {
    class tdt4145.core.repo.TemplateDAO {
        - connection : Connection
        + TemplateDAO()
        + close()
        ~ getConnection()
    }
  }
  

  namespace tdt4145.core.repo {
    class tdt4145.core.repo.ThreadDAO {
        - connection : Connection
        + CreateComment()
        + CreatePost()
        + CreateThread()
        + ThreadDAO()
        + checkAnonymous()
        + getTagID()
        + getTags()
        + getTopThread()
        + linkPostTag()
        + searchByKeyword()
    }
  }
  

  namespace tdt4145.core.repo {
    class tdt4145.core.repo.UserDAO {
        - connection : Connection
        + UserDAO()
        + addUser()
        + getInstructor()
        + isPasswordCorrect()
        + likeThread()
        + logIn()
        + logOut()
        + overviewStatistics()
        + setPassword()
        + viewedPost()
    }
  }


  tdt4145.core.repo.Password -[hidden]> tdt4145.core.repo.TemplateDAO

  tdt4145.core.repo.CourseDAO -up-|> tdt4145.core.repo.TemplateDAO
  tdt4145.core.repo.FolderDAO -up-|> tdt4145.core.repo.TemplateDAO
  tdt4145.core.repo.TemplateDAO .up.|> java.lang.AutoCloseable
  tdt4145.core.repo.ThreadDAO -up-|> tdt4145.core.repo.TemplateDAO
  tdt4145.core.repo.UserDAO -up-|> tdt4145.core.repo.TemplateDAO
@enduml
